--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,4 @@ env:
     # please get your own free key if you want to test yourself
     - SAUCE_USERNAME: dojo2-core-ci
     - SAUCE_ACCESS_KEY: bec266b5-92a6-4dad-bccb-7e3632173abc
-install:
-  - git submodule update --init --recursive
-  - git clone --recursive https://github.com/theintern/intern.git ../intern
-  - cd ../intern
-  - npm install --production
-script: node runner.js config=dojo2-core/tests/intern
+script: node node_modules/intern/runner.js config=tests/intern
